--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,14 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/fonts/overpass.css",
+              "src/assets/fonts/syne.css"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts/overpass.css",
+              "src/assets/fonts/syne.css"
             ],
             "scripts": []
           },
