contact.component scss update, add arrow up container + style

--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,14 @@
               "src/favicon.ico",
               "src/assets",
               "src/assets/fonts/overpass.css",
-              "src/assets/fonts/syne.css"
+              "src/assets/fonts/syne.css",
+              "src/assets/fonts/poppins.css"
             ],
             "styles": [
               "src/styles.scss",
               "src/assets/fonts/overpass.css",
-              "src/assets/fonts/syne.css"
+              "src/assets/fonts/syne.css",
+              "src/assets/fonts/poppins.css"
             ],
             "scripts": []
           },
